-duplicate tab bugfix -userlist displays users/ranks properly -scrollbar css -removed leading 0 from timestamp

--- a/src/com/mercuryirc/client/res/css/ApplicationPane.css
+++ b/src/com/mercuryirc/client/res/css/ApplicationPane.css
@@ -49,8 +49,84 @@
 	-fx-background-color: light-background-color;
 	-fx-border-color: border-color;
 	-fx-border-width: 0px 1px 0px 1px;
+	-fx-padding: 10px 15px 10px 15px;
+}
+
+#user-list:focused {
+	-fx-border-color: border-color;
+	-fx-border-width: 0px 1px 0px 1px;
+}
+
+#user-rank-cell {
+	-fx-border-color: light-line-color;
+	-fx-border-width: 1px 0px 0px 0px;
+}
+
+#user-label {
+	-fx-font-size: 13pt;
+	-fx-text-fill: control-hover-color;
+}
+
+#rank-label {
+	-fx-font-size: 13pt;
+	-fx-text-fill: control-color;
 }
 
 #input-pane {
 	-fx-border-width: 1px 0px 1px 0px;
+}
+
+#message-pane .scroll-bar:vertical {
+	-fx-padding: 5px 5px 5px 0px;
+}
+
+.scroll-pane {
+	-fx-background-color: transparent;
+	-fx-border-color: transparent;
+}
+
+.scroll-bar {
+	-fx-background-color: transparent;
+	-fx-background-insets: 0;
+}
+
+.scroll-bar:vertical {
+	-fx-padding: 0px;
+}
+
+.scroll-bar .track-background {
+	-fx-background-color: transparent;
+	-fx-background-radius: 0;
+	-fx-background-insets: 0;
+}
+
+.scroll-bar .track {
+	-fx-background-color: background-color;
+	-fx-background-radius: 0.5em;
+	-fx-background-size: 15px auto;
+	-fx-background-insets: 0;
+}
+
+.scroll-bar .thumb {
+	-fx-background-color: border-color;
+	-fx-background-insets: 0 1 0 1;
+	-fx-background-radius: 0.5em;
+	-fx-border-color: transparent;
+	-fx-border-width: 1 0 0 0;
+	-fx-border-radius: 0.9em;
+}
+
+.scroll-bar .increment-button,
+.scroll-bar .decrement-button {
+	-fx-background-color: transparent;
+	-fx-background-insets: 0;
+}
+
+.scroll-bar .increment-arrow,
+.scroll-bar .decrement-arrow,
+.corner {
+	-fx-background-color: transparent;
+	-fx-background-insets: 0;
+	-fx-padding: 0;
+	-fx-shape: null;
 }
